# ADE-Workbench

./: .eslintrc.cjs  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: probe-host.mjs  wait-for-host.mjs
scripts/dev/: doctor.sh
src/: App.tsx
src-host-lite/: Cargo.toml
src-host-lite/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ConflictPane.tsx  FlowsPane.tsx  HostStatus.tsx  PRPane.tsx  WorkspacePane.tsx
src/flows/: append-dod.yaml  kill-host-win.yaml  kill-host-wsl.yaml  merge-train.yaml
src/lib/: cmd.ts  conflict.ts  flowInputs.ts  flowLaunch.ts  flows.ts  gh.ts  git.ts  host.ts  hostClient.ts  hostCtx.tsx
tests/: cmd.spec.ts  conflict.spec.ts  flows.spec.ts  flows_dev.spec.ts  flows_inputs.spec.ts  gh_parse.spec.ts  git_status_parse.spec.ts  host-lite.spec.ts  host_libs.spec.ts  panes_host.spec.tsx
vite.plugins/: flowsDev.ts
