[package]
name = "ade-workbench-host"
version = "0.0.1"
edition = "2021"

[features]
# Enabling "host" also enables the optional tauri crate.
host = ["dep:tauri"]

[dependencies]
# Tauri is optional; only pulled in when building with --features host
tauri = { version = "1", optional = true}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = "1"
